[gd_scene load_steps=2 format=3 uid="uid://c8y7qw5n3j4k1"]

[ext_resource type="Script" path="res://scripts/ui/hud_controller.gd" id="1_hud_controller"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud_controller")

[node name="StatsLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Player: 0 | AI: 0 | Neutral: 0"

[node name="SelectedInfo" type="Label" parent="."]
visible = false
offset_left = 20.0
offset_top = 70.0
offset_right = 600.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 20
text = "Selected: Player | Spores: 0 | Energy: 100 | Defense: 1.0x"

[node name="GameOverPanel" type="Panel" parent="."]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "VICTORY!
You conquered all asteroids!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Restart Game"
